mem/style.css
#summary, #detail {
  width: 960px;
}

ul {
  padding: 0;
}

#column {
  width: 275px;
  position: absolute;
  top: 0;
  right: 0;
  font-size: 1em;

  hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
}
#text-details h2 {
  margin: 0px;
  font-family: monospace;
}

#text-details li {
  list-style: none;
}
.text-detail {
  border: 3px solid transparent;
  padding: 3px;
  position: relative;
  margin: 1px 0;
}

.text-detail.hovered {
  border-width: 5px;
  padding: 1px;
}


.text-detail-controls {
  text-align: right;
  font-size: small;
}
.control {
  cursor: pointer;
  display: inline-block;
  padding: 0 2px;
}

.keep-button {
  color: green;
}
.keep-button:after {
  content: 'Remove others'
}
.clear-button {
  color: red;
}
.clear-button:after {
  content: 'Remove'
}

.pr-title {
  font-style: italic;
}
.date-text, .mem-text, .cpu-text {
  font-size: 0.8em;
}

.hidden {
  display: none;
}

.plot {
  position: relative;
}

.reset-button {
  cursor: pointer;
  font-size: small;
  position: absolute;
  bottom: 30px;
  right: 60px;

  padding: 2px;
  background: rgba(255,255,255,0.8);
  border-radius: 2px;
  border: 1px solid black;
}

/* svg */

.clipper {
  fill: none;
}

.axis {
  font-size: 0.73em;
}
.axis path, .axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}
.x.axis path, .x.axis line {
  stroke: black;
}

.line {
  fill: none;
  stroke: black;
  stroke-width: 2px;
}

.line.hovered {
  stroke-width: 4px;
}

.line.cpu {
  stroke-width: 1px;
}
.axis.cpu path, .axis.cpu line, .line.cpu, .point.cpu {
  stroke: red;
  stroke-dasharray: 3, 3;
}
.cpu text {
  fill: red;
}
.axis.mem path, .axis.mem line, .line.mem, .point.mem {
  stroke: blue;
}
.mem text {
  fill: blue;
}

.point {
  fill: none;
  stroke-width: 2px;
}

.detail-visible {
  font-weight: bold;
}

.far-zoom .detail-visible > .hash {
  visibility: visible
}

.far-zoom  .hash {
  visibility: collapse
}

.marker {
  pointer-events: all;
  cursor: pointer;
}
.marker-line {
  fill: none;
  stroke-width: 2.5px;
  opacity: 0.2;
  stroke: black;
}

.line-now {
  stroke-width: 0.5px;
}
#marker-now {
  cursor: default;
}
#marker-now > .hash {
  visibility: visible
}

.pass-line {
  stroke: black;
  opacity: 0.9;
  stroke-width: 0.5px;
  fill: none;
}

.pass, .hash {
  font-size: 0.7em;
  font-family: "monospace";
}

.pass {
  opacity: 0.8;
}

.time-tick {
  stroke-dasharray: 2, 2;
  stroke-width: 2px;
}

